--- a/src/styles/base/_tokens.scss
+++ b/src/styles/base/_tokens.scss
@@ -19,7 +19,7 @@ $core-tokens: (
   "dark-bg": #121212,
   "dark-surface-base": #1e1e1e,
 
-  // Primary (Purple) - NEW
+  // Purple
   "purple-25": #fcfaff,
   "purple-50": #f9f7fc,
   "purple-75": #f4f0fd,
@@ -35,7 +35,7 @@ $core-tokens: (
   "purple-700": #673ab7,
   "purple-950": #2f1863,
 
-  // Secondary (Pink) - NEW
+  // Pink
   "pink-50": #fdf2f7,
   "pink-100": #fce4ec,
   "pink-300": #f8bbd0,
@@ -47,7 +47,7 @@ $core-tokens: (
   "pink-900": #c2185b,
   "pink-950": #5c0c2b,
 
-  // Original Primary (Cyan)
+  // Cyan
   "cyan-50": #f7fdff,
   "cyan-100": #f3fbfd,
   "cyan-200": #e9fafc,
@@ -62,7 +62,7 @@ $core-tokens: (
   "cyan-subtle-dark": #0d2326,
   "cyan-hover-dark": #a6eaf2,
 
-  // Original Secondary (Orange)
+  // Orange
   "orange-100": #fef6f3,
   "orange-200": #fdece7,
   "orange-300": #f8a88f,
