--- a/src/app/drafts/draft-overview/draft-preview/draft-preview.component.scss
+++ b/src/app/drafts/draft-overview/draft-preview/draft-preview.component.scss
@@ -1,18 +1,299 @@
-.bg-aTeam-300 {
-  background-color: var(--pdz-color-primary-container);
-  color: var(--pdz-color-on-primary-container);
-}
 
-.bg-aTeam-100 {
+.draft-preview-container {
+  padding: 0.5rem;
+  margin: 0.5rem;
+  border-width: 2px;
+  border-style: solid;
+  border-radius: 0.75rem;
   background-color: var(--pdz-color-surface);
   color: var(--pdz-on-color-surface);
-}
-
-.bg-aTeam-200 {
-  background-color: var(--pdz-color-primary);
-  color: var(--pdz-color-on-primary);
-}
-
-.border-aTeam-200 {
   border-color: var(--pdz-color-primary-border);
+
+  .header {
+    display: flex;
+    align-items: center;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+
+    .title {
+      font-size: 1.5rem; /* 24px */
+      line-height: 2rem; /* 32px */
+      font-family: 'Nasalization RG', sans-serif;
+      font-weight: 700;
+    }
+  }
+
+  .drafts-grid {
+    display: grid;
+    height: auto;
+    grid-auto-flow: row;
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+    gap: 1rem;
+    padding: 0.5rem;
+    overflow: auto;
+
+    @media (min-width: 768px) {
+      grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+
+    @media (min-width: 1024px) {
+      grid-template-columns: repeat(3, minmax(0, 1fr));
+    }
+
+    @media (min-width: 1536px) {
+      grid-template-columns: repeat(4, minmax(0, 1fr));
+    }
+  }
+
+  .draft-card {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+    background-color: var(--pdz-color-primary);
+    color: var(--pdz-color-on-primary);
+    border-radius: 0.75rem;
+
+    .draft-card-body {
+      flex-grow: 1;
+      padding: 0.5rem;
+      box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+      background-color: var(--pdz-color-primary-container);
+      color: var(--pdz-color-on-primary-container);
+      border-radius: 0.75rem;
+
+      .draft-card-header {
+        display: flex;
+        align-items: center;
+        width: 100%;
+        gap: 0.5rem;
+        height: fit-content;
+
+        .league-name {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          width: 60%;
+          height: auto;
+          padding: 0.25rem;
+          overflow: hidden;
+          font-weight: 600;
+          text-align: center;
+          white-space: normal;
+          border-radius: 9999px;
+          box-shadow: inset 0 2px 4px 0 rgb(0 0 0 / 0.05);
+          font-size: 1rem; // text-medium assumption
+          background-color: var(--pdz-color-primary);
+          color: var(--pdz-color-on-primary);
+          text-overflow: ellipsis;
+        }
+
+        .ruleset, .format {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          width: 20%;
+          padding: 0.25rem;
+          overflow: hidden;
+          font-size: 0.75rem;
+          line-height: 1rem;
+          font-weight: 600;
+          text-align: center;
+          white-space: normal;
+          border-radius: 9999px;
+          box-shadow: inset 0 2px 4px 0 rgb(0 0 0 / 0.05);
+          height: fit-content;
+          background-color: var(--pdz-color-primary);
+          color: var(--pdz-color-on-primary);
+          text-overflow: ellipsis;
+        }
+      }
+
+      .sprites {
+        display: grid;
+        grid-template-columns: repeat(6, minmax(0, 1fr));
+        gap: 0.25rem;
+        padding-left: 1rem;
+        padding-right: 1rem;
+        padding-top: 0.5rem;
+      }
+    }
+
+    .actions {
+      display: flex;
+      padding: 0.5rem;
+
+      .matches-link {
+        flex-grow: 1;
+        padding: 0.25rem;
+        font-weight: 600;
+        text-align: center;
+        box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+        height: fit-content;
+        background-color: var(--pdz-color-primary-container);
+        color: var(--pdz-color-on-primary-container);
+        border-radius: 0.75rem;
+        &:hover {
+          box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+        }
+      }
+
+      .action-buttons {
+        display: grid;
+        align-items: center;
+        justify-content: center;
+        grid-template-columns: repeat(3, minmax(0, 1fr));
+        gap: 0.5rem;
+        padding-left: 0.5rem;
+        padding-right: 0.5rem;
+
+        .action-button {
+          width: 2rem;
+          height: 2rem;
+          padding: 0.25rem;
+          box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+          border-radius: 0.75rem;
+          background-color: var(--pdz-color-primary-container);
+          color: var(--pdz-color-on-primary-container);
+          &:hover {
+            cursor: pointer;
+            box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+          }
+        }
+      }
+
+      .confirmation {
+        display: flex;
+        width: 100%;
+
+        .confirmation-text {
+          width: 66.666667%;
+          margin: 0.5rem;
+          text-align: center;
+          box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+          background-color: var(--pdz-color-primary-container);
+          color: var(--pdz-color-on-primary-container);
+          border-radius: 0.75rem;
+        }
+
+        .confirmation-yes, .confirmation-no {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          width: 16.666667%;
+          margin: 0.5rem;
+          box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+          cursor: pointer;
+          background-color: var(--pdz-color-primary-container);
+          color: var(--pdz-color-on-primary-container);
+          border-radius: 0.75rem;
+          &:hover {
+            box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+          }
+        }
+      }
+
+      .edit-menu {
+        display: flex;
+        width: 100%;
+
+        .back-button {
+          width: 16.666667%;
+          margin: 0.5rem;
+          text-align: center;
+          box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+          cursor: pointer;
+          background-color: var(--pdz-color-primary-container);
+          color: var(--pdz-color-on-primary-container);
+          border-radius: 0.75rem;
+          &:hover {
+            box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+          }
+        }
+
+        .trade-button {
+          width: 33.333333%;
+          margin: 0.5rem;
+          text-align: center;
+          box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+          background-color: var(--pdz-color-primary-container);
+          border-radius: 0.75rem;
+          color: #747C8B; // aTeam-500
+        }
+
+        .edit-team-button {
+          width: 33.333333%;
+          margin: 0.5rem;
+          text-align: center;
+          box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+          background-color: var(--pdz-color-primary-container);
+          color: var(--pdz-color-on-primary-container);
+          border-radius: 0.75rem;
+          &:hover {
+            box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+          }
+        }
+
+        .delete-button {
+          width: 16.666667%;
+          margin: 0.5rem;
+          text-align: center;
+          box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+          cursor: pointer;
+          background-color: var(--pdz-color-primary-container);
+          color: var(--pdz-color-on-primary-container);
+          border-radius: 0.75rem;
+          &:hover {
+            box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+          }
+        }
+      }
+    }
+  }
+
+  .footer {
+    display: flex;
+    padding: 0.75rem;
+
+    .add-league-button {
+      display: flex;
+      align-items: center;
+      padding: 0.25rem;
+      border-radius: 0.5rem;
+      box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+      background-color: var(--pdz-color-primary-container);
+      color: var(--pdz-color-on-primary-container);
+      &:hover {
+        box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+      }
+
+      .add-league-icon {
+        width: 2rem;
+        stroke: black; // symbolColor-main
+      }
+    }
+
+    .spacer {
+      flex-grow: 1;
+    }
+
+    .archives-button {
+      display: flex;
+      align-items: center;
+      padding: 0.25rem;
+      border-radius: 0.5rem;
+      box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+      background-color: var(--pdz-color-primary-container);
+      color: var(--pdz-color-on-primary-container);
+      &:hover {
+        box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+      }
+
+      .archives-icon {
+        width: 2rem;
+      }
+    }
+  }
 }
