refactor draft-preview

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,9 +3,9 @@
   flex-direction: column;
   justify-content: space-between;
   height: 100dvh;
-  color: var(--symbolColor-main);
+  color: var(--pdz-color-on-surface);
   font-family: var(--pdz-font-regular);
-  background-color: var(--pdz-color-surface);
+  background-color: var(--pdz-color-background);
 }
 
 main {
