--- a/src/app/drafts/matchup-overview/matchup-overview.component.html
+++ b/src/app/drafts/matchup-overview/matchup-overview.component.html
@@ -137,7 +137,7 @@
                       }
                     </div>
                   </div>
-                  <div class="team-container alternate">
+                  <div class="team-container">
                     <div class="name-container">
                       <div class="name-text">
                         {{ matchupData.summary[1].teamName }}
