--- a/src/styles/pdz-themes/_sunset.scss
+++ b/src/styles/pdz-themes/_sunset.scss
@@ -73,7 +73,7 @@ $theme: (
     logo-ring-6: "pink-800",
     logo-ring-7: "pink-900",
     logo-core-1: "white",
-    logo-core-2: "logo-core-2",
+    logo-core-2: "logo-core-color",
     logo-top: "purple-600",
     logo-bottom: "pink-600",
     logo-background: "white",
