--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -41,7 +41,7 @@
   }
 
   /* For Firefox */
-  * {
+  html {
     scrollbar-width: thin;
     scrollbar-color: var(--pdz-color-surface-dim) var(--pdz-color-surface);
   }
