--- a/src/app/drafts/draft-overview/draft-preview/draft-preview.component.scss
+++ b/src/app/drafts/draft-overview/draft-preview/draft-preview.component.scss
@@ -1,3 +1,4 @@
+@use "../../../../styles/mixins" as *;
 
 .draft-preview-container {
   padding: 0.5rem;
@@ -12,15 +13,12 @@
   .header {
     display: flex;
     align-items: center;
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
-    padding-top: 0.25rem;
-    padding-bottom: 0.25rem;
+    padding: 0.25rem 1.5rem;
 
     .title {
       font-size: 1.5rem; /* 24px */
       line-height: 2rem; /* 32px */
-      font-family: 'Nasalization RG', sans-serif;
+      font-family: "Nasalization RG", sans-serif;
       font-weight: 700;
     }
   }
@@ -51,7 +49,7 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-    box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+    box-shadow: var(--pdz-level-2);
     background-color: var(--pdz-color-primary);
     color: var(--pdz-color-on-primary);
     border-radius: 0.75rem;
@@ -59,7 +57,7 @@
     .draft-card-body {
       flex-grow: 1;
       padding: 0.5rem;
-      box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+      box-shadow: var(--pdz-level-2);
       background-color: var(--pdz-color-primary-container);
       color: var(--pdz-color-on-primary-container);
       border-radius: 0.75rem;
@@ -83,14 +81,15 @@
           text-align: center;
           white-space: normal;
           border-radius: 9999px;
-          box-shadow: inset 0 2px 4px 0 rgb(0 0 0 / 0.05);
-          font-size: 1rem; // text-medium assumption
+          box-shadow: var(--pdz-level-inset-2);
+          font-size: 1rem;
           background-color: var(--pdz-color-primary);
           color: var(--pdz-color-on-primary);
           text-overflow: ellipsis;
         }
 
-        .ruleset, .format {
+        .ruleset,
+        .format {
           display: flex;
           align-items: center;
           justify-content: center;
@@ -103,7 +102,7 @@
           text-align: center;
           white-space: normal;
           border-radius: 9999px;
-          box-shadow: inset 0 2px 4px 0 rgb(0 0 0 / 0.05);
+          box-shadow: var(--pdz-level-inset-2);
           height: fit-content;
           background-color: var(--pdz-color-primary);
           color: var(--pdz-color-on-primary);
@@ -115,28 +114,27 @@
         display: grid;
         grid-template-columns: repeat(6, minmax(0, 1fr));
         gap: 0.25rem;
-        padding-left: 1rem;
-        padding-right: 1rem;
-        padding-top: 0.5rem;
+        padding: 0.5rem 1rem;
       }
     }
 
     .actions {
       display: flex;
       padding: 0.5rem;
+      gap: 0.5rem;
 
       .matches-link {
         flex-grow: 1;
         padding: 0.25rem;
         font-weight: 600;
         text-align: center;
-        box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+        box-shadow: var(--pdz-level-2);
         height: fit-content;
         background-color: var(--pdz-color-primary-container);
         color: var(--pdz-color-on-primary-container);
         border-radius: 0.75rem;
         &:hover {
-          box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+          box-shadow: var(--pdz-level-1);
         }
       }
 
@@ -146,107 +144,55 @@
         justify-content: center;
         grid-template-columns: repeat(3, minmax(0, 1fr));
         gap: 0.5rem;
-        padding-left: 0.5rem;
-        padding-right: 0.5rem;
 
         .action-button {
-          width: 2rem;
-          height: 2rem;
-          padding: 0.25rem;
-          box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-          border-radius: 0.75rem;
-          background-color: var(--pdz-color-primary-container);
-          color: var(--pdz-color-on-primary-container);
-          &:hover {
-            cursor: pointer;
-            box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-          }
+          @include button-base(2rem, 0, 0.25rem);
         }
       }
 
       .confirmation {
         display: flex;
         width: 100%;
+        gap: 0.5rem;
 
         .confirmation-text {
-          width: 66.666667%;
+          flex-grow: 1;
           margin: 0.5rem;
           text-align: center;
-          box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+          box-shadow: var(--pdz-level-2);
           background-color: var(--pdz-color-primary-container);
           color: var(--pdz-color-on-primary-container);
           border-radius: 0.75rem;
         }
 
-        .confirmation-yes, .confirmation-no {
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          width: 16.666667%;
-          margin: 0.5rem;
-          box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-          cursor: pointer;
-          background-color: var(--pdz-color-primary-container);
-          color: var(--pdz-color-on-primary-container);
-          border-radius: 0.75rem;
-          &:hover {
-            box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-          }
+        .button {
+          @include button-base(16.666667%);
         }
       }
 
       .edit-menu {
         display: flex;
         width: 100%;
+        gap: 0.5rem;
 
-        .back-button {
-          width: 16.666667%;
-          margin: 0.5rem;
-          text-align: center;
-          box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-          cursor: pointer;
-          background-color: var(--pdz-color-primary-container);
-          color: var(--pdz-color-on-primary-container);
-          border-radius: 0.75rem;
-          &:hover {
-            box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+        .button {
+          @include button-base(auto, 0.5rem, 0.5rem);
+
+          &--trade {
+            width: 33.333333%;
+            color: #747c8b; // aTeam-500
           }
-        }
 
-        .trade-button {
-          width: 33.333333%;
-          margin: 0.5rem;
-          text-align: center;
-          box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-          background-color: var(--pdz-color-primary-container);
-          border-radius: 0.75rem;
-          color: #747C8B; // aTeam-500
-        }
-
-        .edit-team-button {
-          width: 33.333333%;
-          margin: 0.5rem;
-          text-align: center;
-          box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-          background-color: var(--pdz-color-primary-container);
-          color: var(--pdz-color-on-primary-container);
-          border-radius: 0.75rem;
-          &:hover {
-            box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+          &--edit-team {
+            width: 33.333333%;
           }
-        }
 
-        .delete-button {
-          width: 16.666667%;
-          margin: 0.5rem;
-          text-align: center;
-          box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-          cursor: pointer;
-          background-color: var(--pdz-color-primary-container);
-          color: var(--pdz-color-on-primary-container);
-          border-radius: 0.75rem;
-          &:hover {
-            box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+          &--delete {
+            width: 16.666667%;
+          }
+
+          &--back {
+            width: 16.666667%;
           }
         }
       }
@@ -256,44 +202,23 @@
   .footer {
     display: flex;
     padding: 0.75rem;
+    gap: 0.5rem;
 
-    .add-league-button {
-      display: flex;
-      align-items: center;
-      padding: 0.25rem;
-      border-radius: 0.5rem;
-      box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-      background-color: var(--pdz-color-primary-container);
-      color: var(--pdz-color-on-primary-container);
-      &:hover {
-        box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-      }
+    .button {
+      @include button-base(auto, 0, 0.25rem);
+    }
 
-      .add-league-icon {
-        width: 2rem;
-        stroke: black; // symbolColor-main
-      }
+    .add-league-icon {
+      width: 2rem;
+      stroke: black; // symbolColor-main
     }
 
     .spacer {
       flex-grow: 1;
     }
 
-    .archives-button {
-      display: flex;
-      align-items: center;
-      padding: 0.25rem;
-      border-radius: 0.5rem;
-      box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-      background-color: var(--pdz-color-primary-container);
-      color: var(--pdz-color-on-primary-container);
-      &:hover {
-        box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-      }
-
-      .archives-icon {
-        width: 2rem;
-      }
+    .archives-icon {
+      width: 2rem;
     }
   }
 }
