--- a/src/styles/pdz-themes/_normal.scss
+++ b/src/styles/pdz-themes/_normal.scss
@@ -65,15 +65,15 @@ $theme: (
     scrim: "black",
 
     // Logo
-    logo-ring-1: "logo-ring-1",
-    logo-ring-2: "logo-ring-2",
-    logo-ring-3: "logo-ring-3",
-    logo-ring-4: "logo-ring-4",
-    logo-ring-5: "logo-ring-5",
-    logo-ring-6: "logo-ring-6",
-    logo-ring-7: "logo-ring-7",
+    logo-ring-1: "orange-200",
+    logo-ring-2: "orange-300",
+    logo-ring-3: "orange-400",
+    logo-ring-4: "orange-500",
+    logo-ring-5: "orange-600",
+    logo-ring-6: "orange-700",
+    logo-ring-7: "orange-800",
     logo-core-1: "white",
-    logo-core-2: "logo-core-2",
+    logo-core-2: "logo-core-color",
     logo-top: "cyan-800",
     logo-bottom: "orange-500",
     logo-background: "white",
@@ -103,6 +103,7 @@ $theme: (
     primary-hover: "cyan-hover-dark",
     primary-border: "cyan-700",
     primary-subtle: "cyan-subtle-dark",
+    primary-gradient: "primary-gradient-dark",
 
     // Secondary Colors
     secondary: "orange-400",
@@ -142,5 +143,19 @@ $theme: (
     // Misc
     shadow: "black",
     scrim: "black",
+
+    // Logo
+    logo-ring-1: "orange-200",
+    logo-ring-2: "orange-300",
+    logo-ring-3: "orange-400",
+    logo-ring-4: "orange-500",
+    logo-ring-5: "orange-600",
+    logo-ring-6: "orange-700",
+    logo-ring-7: "orange-800",
+    logo-core-1: "white",
+    logo-core-2: "logo-core-color",
+    logo-top: "cyan-800",
+    logo-bottom: "orange-500",
+    logo-background: "white",
   ),
 );
