--- a/src/app/drafts/opponent-overview/opponent-preview/opponent-preview.component.html
+++ b/src/app/drafts/opponent-overview/opponent-preview/opponent-preview.component.html
@@ -40,7 +40,7 @@
       <div class="matchups-container">
         @for (matchup of matchups; track $index) {
           <div
-            class="matchup alternate"
+            class="matchup"
             (click)="selectMatchup(matchup)"
             [ngClass]="{ selected: selectedMatchup === matchup }"
           >
