--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -3,14 +3,18 @@
     <div class="title-container">
       <span class="title-text"> POKEMON </span>
       <pdz-icon name="logo-small" class="title-logo"></pdz-icon>
-      <span class="title-text alternate"> DRAFTZONE </span>
+      <span class="title-text"> DRAFTZONE </span>
     </div>
     <p class="subtitle">
       Your ultimate destination for Pokémon drafting and league management.
     </p>
     <div class="cta-buttons">
-      <a class="cta-button btn btn-primary" routerLink="/">Button Style 1</a>
-      <a class="cta-button btn btn-secondary" routerLink="/">Button Style 2 </a>
+      <a class="cta-button btn btn-secondary" routerLink="/drafts"
+        >View my Matchups</a
+      >
+      <a class="cta-button btn btn-secondary" routerLink="/planner"
+        >Plan your Draft
+      </a>
     </div>
   </div>
 
@@ -23,23 +27,23 @@
     </div>
     <div class="secondary-actions">
       <a
-        class="secondary-action btn"
+        class="secondary-action btn btn-primary"
         href="https://discord.gg/sQUEBW4UVx"
         target="_blank"
       >
         Join Our Discord
       </a>
       <a
-        class="secondary-action btn"
+        class="secondary-action btn btn-primary"
         href="https://github.com/LumarisX/pokemon-draftzone-client"
         target="_blank"
       >
         Contribute to the Project
       </a>
-      <a class="secondary-action btn" routerLink="/supporters">
+      <a class="secondary-action btn btn-primary" routerLink="/supporters">
         Project Supporters
       </a>
-      <a class="secondary-action btn" routerLink="/about">
+      <a class="secondary-action btn btn-primary" routerLink="/about">
         About Pokemon DraftZone
       </a>
     </div>
