--- a/src/app/debug/themes/debug-themes.component.scss
+++ b/src/app/debug/themes/debug-themes.component.scss
@@ -3,9 +3,7 @@
 .themed-component-wrapper {
   background-color: var(--pdz-color-background);
   color: var(--pdz-color-on-surface);
-  font-family:
-    -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue",
-    Arial, sans-serif;
+
   padding: 2rem;
   // transition:
   //   background-color 0.3s ease,
@@ -24,9 +22,17 @@
     gap: 0.5rem;
   }
 
-  h1,
   h2 {
     color: var(--pdz-color-on-surface);
+    font-family: var(--pdz-font-fancy);
+    font-size: var(--pdz-font-large);
+  }
+
+  h3 {
+    color: var(--pdz-color-on-surface-variant);
+    margin-bottom: 0.5rem;
+    margin-top: 1.5rem;
+    font-family: var(--pdz-font-fancy);
   }
 
   p {
